fixed double border issue

--- a/sass/table-views.scss
+++ b/sass/table-views.scss
@@ -20,7 +20,7 @@
   border-bottom: $border-default;
 
   // Remove the border from the last table view item
-  &:last-child {
+  &:last-of-type {
     border-bottom: 0;
   }
   // If it's a table view of links, make sure the child <a> takes up full table view item tap area (want to avoid selecting child buttons though)
